# Tulipe

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: app-window.slint  globals.slint
ui/components/: elements.slint
