[package]
name = "tulipe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notifica = "3.0.2"
notify-rust = "4.11.4"
slint = "1.8.0"
winrt-notification = "0.5.1"
winrt-toast = "0.1.1"

[build-dependencies]
slint-build = "1.8.0"
